я сделала страничку с принятой заявкой и добавила переходы по страничкам
с адаптивом

--- a/competition/заявка/Application.html
+++ b/competition/заявка/Application.html
@@ -51,7 +51,7 @@
             <label for="">Электронная почта</label>
             <input type="email">
         </div>
-        <a href="">
+        <a href="../заявка принята/AcceptedApplication.html">
             <button>Отправить</button>
         </a>
     </div>
