--- a/competition/котики/Cats.html
+++ b/competition/котики/Cats.html
@@ -42,24 +42,36 @@
     <div id="3" class="cats-screen">
         <p>Католог котиков</p>
         <div>
-            <div class="first-cat-div">               
-                <p>Джонни</p>
-            </div>
-            <div class="second-cat-div">
-                <p>Нана</p>
-            </div>
-            <div class="therd-cat-div">
-                <p>Лексус</p>
-            </div>
-            <div class="fourth-cat-div">
-                <p>Стюарт</p>
-            </div>
-            <div class="fifth-cat-div">
-                <p>Фия</p>
-            </div>
-            <div class="sixth-cat-div">
-                <p>Ричард</p>
-            </div>
+            <a href="../заявка/Application.html#3">
+                <div class="first-cat-div">               
+                    <p>Джонни</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="second-cat-div">
+                    <p>Нана</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="therd-cat-div">
+                    <p>Лексус</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="fourth-cat-div">
+                    <p>Стюарт</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="fifth-cat-div">
+                    <p>Фия</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="sixth-cat-div">
+                    <p>Ричард</p>
+                </div>
+            </a>
         </div>
         <a href="">
             <button>Посмотреть больше</button>
