--- a/competition/собачки/Dogs.html
+++ b/competition/собачки/Dogs.html
@@ -42,24 +42,36 @@
     <div id="3" class="dogs-screen">
         <p>Католог собачек</p>
         <div>
-            <div class="first-dog-div">               
-                <p>Марка</p>
-            </div>
-            <div class="second-dog-div">
-                <p>Тим</p>
-            </div>
-            <div class="therd-dog-div">
-                <p>Грег</p>
-            </div>
-            <div class="fourth-dog-div">
-                <p>Кенни</p>
-            </div>
-            <div class="fifth-dog-div">
-                <p>Юки</p>
-            </div>
-            <div class="sixth-dog-div">
-                <p>Тори</p>
-            </div>
+            <a href="../заявка/Application.html#3">
+                <div class="first-dog-div">               
+                    <p>Марка</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="second-dog-div">
+                    <p>Тим</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="therd-dog-div">
+                    <p>Грег</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="fourth-dog-div">
+                    <p>Кенни</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="fifth-dog-div">
+                    <p>Юки</p>
+                </div>
+            </a>
+            <a href="../заявка/Application.html#3">
+                <div class="sixth-dog-div">
+                    <p>Тори</p>
+                </div>
+            </a>
         </div>
         <a href="">
             <button>Посмотреть больше</button>
