я изменила картинку на страничках котиков и собачек

--- a/competition/собачки/Dogs.html
+++ b/competition/собачки/Dogs.html
@@ -33,7 +33,7 @@
                 <a href="#3"><button class="button-in-main-screen">Приютить друга</button></a>
              </div>
              <div>
-                <img class="img-in-main-screen" src="картинки/котик.png" alt="картинка котенка">
+                <img class="img-in-main-screen" src="картинки/собачка.png" alt="картинка котенка">
              </div>
         </main>
              
