--- a/competition/котики/Cats.html
+++ b/competition/котики/Cats.html
@@ -73,7 +73,7 @@
                 </div>
             </a>
         </div>
-        <a href="">
+        <a href="#">
             <button>Посмотреть больше</button>
         </a>
     </div>
