--- a/competition/заявка принята/AcceptedApplication.html
+++ b/competition/заявка принята/AcceptedApplication.html
@@ -27,7 +27,8 @@
 
     
     <div id="3" class="accepted-application-screen">
-        <p>Спасибо за оставленную заявку! Наш сотрудник позвонить вам в течении 15 минут, пожалуйста, подождите!</p>
+        <p class="big-text">Заявка принята</p>
+        <p class="small-text">Спасибо за оставленную заявку! Наш сотрудник позвонить вам в течении 15 минут, пожалуйста, подождите!</p>
     </div>
 
     <div>
